{
  "version": 4,
  "terraform_version": "1.11.3",
  "serial": 950,
  "lineage": "7771a3f6-c617-68ff-c4e8-11dc3d4256f7",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08a6efd148b1f7504",
            "arn": "arn:aws:ec2:us-east-1:034362070956:instance/i-0033946f31f97bb9c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0033946f31f97bb9c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "laravel-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c1d482499a77f898",
            "private_dns": "ip-10-0-3-48.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.48",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-09baa6ee5b13a8976",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a20977af628abcf",
            "tags": {
              "Name": "devops-laravel-node-app-laravel-server",
              "Role": "laravel"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-laravel-server",
              "Role": "laravel"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01637faa7f9b50fe4"
            ]
          },
          "dependencies": [
            "module.key_pair.aws_key_pair.this",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08a6efd148b1f7504",
            "arn": "arn:aws:ec2:us-east-1:034362070956:instance/i-0a7af3cbf5ca27477",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a7af3cbf5ca27477",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "laravel-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0378a0373488f1c00",
            "private_dns": "ip-10-0-1-177.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.177",
            "public_dns": "ec2-98-84-50-9.compute-1.amazonaws.com",
            "public_ip": "98.84.50.9",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0e0cbc941d0eaa73f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b1b6f8d36b15b114",
            "tags": {
              "Name": "devops-laravel-node-app-bastion-host",
              "Role": "bastion"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-bastion-host",
              "Role": "bastion"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-086d8fff341861410"
            ]
          },
          "dependencies": [
            "module.key_pair.aws_key_pair.this",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.bastion_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-08a6efd148b1f7504",
            "arn": "arn:aws:ec2:us-east-1:034362070956:instance/i-0b0d8ec0c2aa1bf26",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b0d8ec0c2aa1bf26",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "laravel-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05dac7120df160f99",
            "private_dns": "ip-10-0-3-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.68",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-02b484d11e538f178",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02a20977af628abcf",
            "tags": {
              "Name": "devops-laravel-node-app-node-server",
              "Role": "nodejs"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-node-server",
              "Role": "nodejs"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-01637faa7f9b50fe4"
            ]
          },
          "dependencies": [
            "module.key_pair.aws_key_pair.this",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8a62be48c8716da",
            "arn": "arn:aws:ec2:us-east-1:034362070956:elastic-ip/eipalloc-0e8a62be48c8716da",
            "association_id": "eipassoc-0f5313911210cbe20",
            "domain": "vpc",
            "id": "eipalloc-0e8a62be48c8716da",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d94943959e1d70f6",
            "private_dns": "ip-10-0-1-243.ec2.internal",
            "private_ip": "10.0.1.243",
            "public_dns": "ec2-98-85-107-183.compute-1.amazonaws.com",
            "public_ip": "98.85.107.183",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-laravel-node-app-nat-eip"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-nat-eip"
            }
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362070956:internet-gateway/igw-056ff3b8ba7eab39f",
            "id": "igw-056ff3b8ba7eab39f",
            "owner_id": "034362070956",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-laravel-node-app-igw"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-igw"
            },
            "vpc_id": "vpc-02eb403792b63ed90"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e8a62be48c8716da",
            "association_id": "eipassoc-0f5313911210cbe20",
            "connectivity_type": "public",
            "id": "nat-0e27eacf94802ea0a",
            "network_interface_id": "eni-0d94943959e1d70f6",
            "private_ip": "10.0.1.243",
            "public_ip": "98.85.107.183",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b1b6f8d36b15b114",
            "tags": {
              "Name": "devops-laravel-node-app-nat-gateway"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-nat-gateway"
            }
          },
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04c41ede53cb79d401080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0e27eacf94802ea0a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-04c41ede53cb79d40",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_eip.nat_eip",
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362070956:route-table/rtb-04c41ede53cb79d40",
            "id": "rtb-04c41ede53cb79d40",
            "owner_id": "034362070956",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e27eacf94802ea0a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-laravel-node-app-private-route-table"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-private-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb403792b63ed90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362070956:route-table/rtb-04a6a0f809a300720",
            "id": "rtb-04a6a0f809a300720",
            "owner_id": "034362070956",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-056ff3b8ba7eab39f",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-laravel-node-app-public-rt"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb403792b63ed90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e918b04ec25319c1",
            "region": "us-east-1",
            "route_table_id": "rtb-04c41ede53cb79d40",
            "subnet_id": "subnet-02a20977af628abcf"
          },
          "dependencies": [
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03e74c3d663a7d41e",
            "region": "us-east-1",
            "route_table_id": "rtb-04a6a0f809a300720",
            "subnet_id": "subnet-0b1b6f8d36b15b114"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d12a65c051d76331",
            "region": "us-east-1",
            "route_table_id": "rtb-04a6a0f809a300720",
            "subnet_id": "subnet-0b91e54a6779e898f"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.igw",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362070956:subnet/subnet-02a20977af628abcf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a20977af628abcf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034362070956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-laravel-node-app-private-1"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-private-1"
            },
            "vpc_id": "vpc-02eb403792b63ed90"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362070956:subnet/subnet-0558174b9505c0cf5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0558174b9505c0cf5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "034362070956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-laravel-node-app-private-2"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-private-2"
            },
            "vpc_id": "vpc-02eb403792b63ed90"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362070956:subnet/subnet-0b1b6f8d36b15b114",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b1b6f8d36b15b114",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034362070956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-laravel-node-app-public-1"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-public-1"
            },
            "vpc_id": "vpc-02eb403792b63ed90"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362070956:subnet/subnet-0b91e54a6779e898f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b91e54a6779e898f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "034362070956",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-laravel-node-app-public-2"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-public-2"
            },
            "vpc_id": "vpc-02eb403792b63ed90"
          },
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362070956:vpc/vpc-02eb403792b63ed90",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07cdc505585392206",
            "default_route_table_id": "rtb-07892e3228a6eb6ee",
            "default_security_group_id": "sg-045ef0f2e200e87ee",
            "dhcp_options_id": "dopt-0d0af6f70db2f4dbf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02eb403792b63ed90",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07892e3228a6eb6ee",
            "owner_id": "034362070956",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-laravel-node-app-vpc"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362070956:security-group/sg-086d8fff341861410",
            "description": "SSH access for Bastion Host",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-086d8fff341861410",
            "ingress": [
              {
                "cidr_blocks": [
                  "197.211.58.48/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "devops-laravel-node-app-bastion-sg",
            "name_prefix": "",
            "owner_id": "034362070956",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-laravel-node-app-bastion-sg"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-bastion-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb403792b63ed90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysql_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362070956:security-group/sg-05f8399477938bffe",
            "description": "Allow MySQL access from Web EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05f8399477938bffe",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL from Web EC2",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01637faa7f9b50fe4"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "devops-laravel-node-app-mysql-sg",
            "name_prefix": "",
            "owner_id": "034362070956",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-laravel-node-app-mysql-sg"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-mysql-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb403792b63ed90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.web_sg"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:034362070956:security-group/sg-01637faa7f9b50fe4",
            "description": "Allow web, HTTPS, and SSH from Bastion",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01637faa7f9b50fe4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "devops-laravel-node-app-web-sg",
            "name_prefix": "",
            "owner_id": "034362070956",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-laravel-node-app-web-sg"
            },
            "tags_all": {
              "Name": "devops-laravel-node-app-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-02eb403792b63ed90"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "web_ssh_from_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow SSH from Bastion Host",
            "from_port": 22,
            "id": "sgrule-1838203006",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-01637faa7f9b50fe4",
            "security_group_rule_id": "sgr-00c0ef85331a1b583",
            "self": false,
            "source_security_group_id": "sg-086d8fff341861410",
            "timeouts": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.main",
            "module.security_group.aws_security_group.bastion_sg",
            "module.security_group.aws_security_group.web_sg"
          ]
        }
      ]
    }
  ]
}